# serde_args

./: ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
macros/: Cargo.toml  README.md
macros/src/: attributes.rs  container.rs  help.rs  lib.rs  process.rs  test.rs  version.rs
macros/src/container/: descriptions.rs  mod.rs
macros/src/extract/: descriptions.rs  mod.rs
macros/src/generate/: from.rs  mod.rs  parameters.rs
macros/tests/: help_serde.rs  help_serde_deserialize.rs  help_serde_different_local_name.rs  help_serde_from.rs  help_serde_generics.rs  help_serde_into.rs  help_serde_rename.rs  help_serde_serialize.rs  help_serde_with.rs  help_version_serde.rs  help_version_serde_automatically_derived.rs  help_version_serde_deserialize.rs  help_version_serde_different_local_name.rs  help_version_serde_from.rs  help_version_serde_generics.rs  help_version_serde_into.rs  help_version_serde_rename.rs  help_version_serde_serialize.rs  help_version_serde_serialize_manual_clone.rs  help_version_serde_with.rs  serde.rs  serde_automatically_derived.rs  serde_deserialize.rs  serde_different_local_name.rs  serde_rename.rs  serde_serialize.rs  serde_serialize_manual_clone.rs  serde_with.rs  trybuild.rs  version_serde.rs  version_serde_automatically_derived.rs  version_serde_deserialize.rs  version_serde_different_local_name.rs  version_serde_from.rs  version_serde_generics.rs  version_serde_into.rs  version_serde_rename.rs  version_serde_serialize.rs  version_serde_serialize_manual_clone.rs  version_serde_with.rs
macros/tests/trybuild/: const.rs  const.stderr  double_attribute.rs  double_attribute.stderr  extern_crate.rs  extern_crate.stderr  fn.rs  fn.stderr  foreign_mod.rs  foreign_mod.stderr  impl.rs  impl.stderr  macro.rs  macro.stderr  mod.rs  mod.stderr  no_deserialize.rs  no_deserialize.stderr  no_from_impl.rs  no_from_impl.stderr  no_into_impl.rs  no_into_impl.stderr  serde_from_invalid.rs  serde_from_invalid.stderr  serde_into_invalid.rs  serde_into_invalid.stderr  serialize_no_clone.rs  serialize_no_clone.stderr  static.rs  static.stderr  trait.rs  trait.stderr  trait_alias.rs  trait_alias.stderr  type.rs  type.stderr  union.rs  union.stderr  use.rs  use.stderr
src/: error.rs  key.rs  lib.rs  main.rs  specification.rs
src/de/: context.rs  error.rs  mod.rs
src/de/error/: mod.rs  usage.rs
src/de/trace/: mod.rs
src/error/: ansi.rs  intersperse.rs  mod.rs  width.rs
src/parse/: context.rs  levenshtein.rs  mod.rs  token.rs
src/parse/error/: distance.rs  mod.rs
src/trace/: error.rs  hash.rs  keys.rs  mod.rs  shape.rs
tests/: from_args.rs  from_args_seed.rs  from_env.rs
tests/command/: mod.rs
tests/from_args/boolean/: Cargo.toml
tests/from_args/boolean_fields/: Cargo.toml
tests/from_args/empty/: Cargo.toml
tests/from_args/enum_help_color/: Cargo.toml
tests/from_args/enum_version_help/: Cargo.toml
tests/from_args/option/: Cargo.toml
tests/from_args/optional_fields/: Cargo.toml
tests/from_args/required_fields/: Cargo.toml
tests/from_args_seed/boolean/: Cargo.toml
(+61 files in other folders)
