[workspace]
members = [
    "macros"
]
exclude = ["tests"]

[package]
name = "serde_args"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = {version = "1.0.203"}
serde_args_macros = {path = "macros", optional = true}

[dev-dependencies]
claims = "0.7.1"
serde_derive = "1.0.203"

[features]
default = ["macros"]
macros = ["dep:serde_args_macros"]
