[workspace]
members = [
    "macros"
]
exclude = ["tests"]

[package]
name = "serde_args"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/Anders429/serde_args"
description = "Command line argument parsing with serde."
categories = ["command-line-interface"]
keywords = ["cli", "argument", "parser", "arg", "command"]

[dependencies]
serde = "1.0.203"
serde_args_macros = {version = "0.1.0", path = "macros", optional = true}

[dev-dependencies]
claims = "0.8.0"
serde_derive = "1.0.203"

[features]
default = ["macros"]
macros = ["dep:serde_args_macros"]
