[package]
name = "serde_args_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version = "2.0.75", default-features = false, features = ["clone-impls", "extra-traits", "full", "parsing", "printing", "proc-macro"]}

[dev-dependencies]
claims = "0.7.1"
rustversion = "1.0.17"
serde = {version = "1.0.203", features = ["derive"]}
serde_assert = "0.8.0"
serde_with = "3.9.0"
trybuild = "1.0.99"
