[package]
name = "serde_args_macros"
version = "0.1.0"
authors = ["Anders Evensen"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/Anders429/serde_args"
description = "Macros for the serde_args crate."
categories = ["command-line-interface"]
keywords = ["cli", "argument", "parser", "arg", "command"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = {version = "2.0.75", default-features = false, features = ["clone-impls", "extra-traits", "full", "parsing", "printing", "proc-macro"]}

[dev-dependencies]
claims = "0.8.0"
rustversion = "1.0.17"
serde = {version = "1.0.203", features = ["derive"]}
serde_assert = "0.8.0"
serde_with = "3.9.0"
trybuild = "1.0.99"
